--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="bg-gray-50">
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
